# pypa-build-debug

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
src/pypa_build_debug/: __init__.py  __init__.pyi  _primes.pyx
test/: test_primes.py  test_version.py
